--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
+    "@mui/styled-engine-sc": "^5.9.3",
+    "material-icons": "^1.11.8",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "8.21.0",
