--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
     "@mui/styled-engine-sc": "^5.9.3",
+    "firebase": "^9.9.2",
     "material-icons": "^1.11.8",
     "next": "12.2.3",
     "react": "18.2.0",
