--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine-sc": "^5.9.3",
     "firebase": "^9.9.2",
     "material-icons": "^1.11.8",
+    "material-ui": "^0.20.2",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
